--- a/.gitignore
+++ b/.gitignore
@@ -1,83 +1,31 @@
-import { Fee } from '#src/models/entities/Fees.js'
-import Result from '#features/shared/result.js'
-import CustomerFees from '#src/models/CustomerFees.js'
-import BankAccountFee from '#src/models/BankAccountFee.js'
-import InvestimentAccountFee from '#src/models/InvestimentAccountFee.js'
-import { FeeCase } from '#src/models/entities/FeeCase.js'
-import { Field } from '#src/models/entities/Fields.js'
+/* ------------------------------------------------------------------ *
+ *  NOVAS FUNÇÕES PRIVADAS                                            *
+ * ------------------------------------------------------------------ */
 
-export default class FeeGetByCifUseCase {
-  async execute({ customerAccount }) {
-    global.logger.info('FeeGetByCifUseCase()')
-
-    const result = { fees: [] }
-    const fees = await this.#getFeeStandard([
-      {
-        feeType: 'Customer Fees'
-      },
-      {
-        feeType: 'Bank Account Fees'
-      },
-      {
-        feeType: 'Investment Account Fees'
-      }
-    ])
-
-    const customer = new CustomerFees(fees, customerAccount)
-    if (customer.fee) result.fees.push(customer.fee)
-
-    const bank = new BankAccountFee(fees, customerAccount)
-    if (bank.fee) result.fees.push(bank.fee)
-
-    const equityField = await Field.find({ code: 7 })
-    const investiment = new InvestimentAccountFee(
-      fees,
-      customerAccount,
-      equityField[0]
-    )
-    if (investiment.fee?.feeGroups) result.fees.push(investiment.fee)
-
-    const feesActives = await FeeCase.find({
-      cif: customerAccount[0].cifno,
-      status: {
-        $nin: ['DONE', 'REJECTED']
-      },
-      caseNumber: {
-        $exists: true
-      }
-    })
-
-    result.feesActives = feesActives?.map((x) => ({
-      caseNumber: x.caseNumber,
-      id: x.id
-    }))
-
-    result.documentUrl =
-      'https://minio-ui.dev.k8s.safra.int/api/v1/buckets/jarvis-public/objects/download?preview=true&prefix=U2NoZWR1bGVPZkZlZXMucGRm'
-
-    global.logger.info(`documentUrl= ${result.document}`)
-
-    return Result.ok(result)
-  }
-
-  async #getFeeStandard(filter) {
-    global.logger.info('getFeeStandard()')
-
-    const feeResult = []
-
-    for await (const fee of Fee.find({
-      $or: filter
-    }).select({
-      feeType: 1,
-      feeGroups: {
-        name: 1,
-        fields: 1,
-        code: 1
-      }
-    })) {
-      feeResult.push(fee.toObject())
-    }
-
-    return feeResult
-  }
+// 1 ─ consulta rápida no SQL e devolve o id do pacote (1, 2 ou 3)
+async #getDefaultFeePackageIdFromSQL (cifno) {
+  const conn = await connectToFeeMgmtDb();
+  const data = await executeStoreProcedure(
+    conn,
+    'sp_get_fees_byCIF',        // ← usa o mesmo SP e pega só a 1ª linha
+    { cifno }
+  );
+  if (!data || data.length === 0) return null;
+  return data[0]['Default Fee Package Id'] ?? null;
 }
+
+// 2 ─ converte id → URL usando a config carregada no bootstrap
+#getDocumentUrl (feePackageId) {
+  const urls = global.environment.scheduleUrls || {};
+  const key  = { 1: 'intlPB3', 2: 'uSPBIndividual3', 3: 'uSPBCorporation3' }[feePackageId];
+  return key ? urls[key] || '' : '';
+}
+
+/* ------------------------------------------------------------------ *
+ *  DENTRO DO execute() — logo antes do return                        *
+ * ------------------------------------------------------------------ */
+
+const feePackageId = await this.#getDefaultFeePackageIdFromSQL(customerAccount[0].cifno);
+result.documentUrl = this.#getDocumentUrl(feePackageId);
+
+/* ------------------------------------------------------------------ */
