--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,47 @@
-/* ------------------------------------------------------------------ *
- *  NOVAS FUNÇÕES PRIVADAS                                            *
- * ------------------------------------------------------------------ */
+import Result from '#features/shared/result.js'
 
-// 1 ─ consulta rápida no SQL e devolve o id do pacote (1, 2 ou 3)
-async #getDefaultFeePackageIdFromSQL (cifno) {
-  const conn = await connectToFeeMgmtDb();
-  const data = await executeStoreProcedure(
-    conn,
-    'sp_get_fees_byCIF',        // ← usa o mesmo SP e pega só a 1ª linha
-    { cifno }
-  );
-  if (!data || data.length === 0) return null;
-  return data[0]['Default Fee Package Id'] ?? null;
+export default class FeeCaseGetByCifUseCase {
+  async execute({ cif }, feeManagementModel, customerModel) {
+    global.logger.info(`customerModel.getCustomerDetailsByCif(${cif})`)
+    const [errCustomer, responseCustomer] =
+      await customerModel.getCustomerDetailsByCif(cif)
+
+    if (errCustomer) {
+      return Result.fail({ message: "It's not possible to get address cif" })
+    }
+    global.logger.info('feeManagementModel.getFeeByAccount')
+    const [errFee, responseFee] = await feeManagementModel.getFeeByAccount(
+      responseCustomer.data.customer
+    )
+
+    if (errFee) {
+      return Result.fail({ message: "Its's not possible get fee values" })
+    }
+
+    const currentFees =
+      responseCustomer?.data?.customer?.customerCurrentFees?.map((x) => ({
+        feeDescription: x.feeDescription,
+        feeCode: x.feeCode
+      }))
+
+    const result = {
+      customerName: responseCustomer.data.customer.customerAddress.name,
+      customerAddress: responseCustomer.data.customer.customerAddress.address,
+      customerAccountOfficer:
+        responseCustomer.data.customer.customerAddress.officer,
+      cif: responseCustomer.data.customer.customerAddress.cif,
+      branchCity: responseFee.data.accounts[0].branchCity,
+      branchState: responseFee.data.accounts[0].branchState,
+      branchType: responseFee.data.accounts[0].branchType,
+      packageType: responseFee.data.accounts[0].defaultPackageType,
+      packageName: responseFee.data.accounts[0].feePackage,
+      defaultFeePackageId: responseFee.data.accounts[0].defaultFeePackageId,
+      fees: responseFee.data.fees,
+      feesActives: responseFee.data.feesActives,
+      documentUrl: responseFee.data.accounts[0].documentUrl,
+      currentFees
+    }
+    global.logger.info('End process')
+    return Result.ok(result)
+  }
 }
-
-// 2 ─ converte id → URL usando a config carregada no bootstrap
-#getDocumentUrl (feePackageId) {
-  const urls = global.environment.scheduleUrls || {};
-  const key  = { 1: 'intlPB3', 2: 'uSPBIndividual3', 3: 'uSPBCorporation3' }[feePackageId];
-  return key ? urls[key] || '' : '';
-}
-
-/* ------------------------------------------------------------------ *
- *  DENTRO DO execute() — logo antes do return                        *
- * ------------------------------------------------------------------ */
-
-const feePackageId = await this.#getDefaultFeePackageIdFromSQL(customerAccount[0].cifno);
-result.documentUrl = this.#getDocumentUrl(feePackageId);
-
-/* ------------------------------------------------------------------ */
